@@ -14,6 +14,13 @@ Changelog for Statocles
       fully-complete, but they are a lot friendlier than the previous
       docs (which are at http://preaction.me/statocles/pod).
 
+    [Fixed]
+
+    - The `HTMLLint` plugin now appropriately adds the filename to every
+      single lint message. It also uses the HTML::Lint API correctly to
+      avoid any future warnings about using it incorrectly. Thanks
+      @petdance for explaining the proper use of the API.
+
 0.081     2016-10-26 23:17:58-05:00 America/Chicago
 
     [Added]
